--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
     "name": "4d47/form",
     "type": "library",
+    "license": "MIT",
     "description": "A featureless form helper",
+    "keywords": ["form"],
+    "homepage": "https://github.com/4d47/php-form-helper",
+    "authors": [{ "name": "Mathieu Gagnon", "homepage": "http://mathieu.gagnon.name" }],
     "require": { "php": ">=5.3.0" },
     "autoload": { "psr-0": { "Form": "" } }
 }
